# autoro

./: Cargo.toml  README.md
src/: frame_provider.rs  main.rs
src/frame_provider/: image_sequence_provider.rs  mod.rs  null_provider.rs
