[package]
name = "autoro"
version = "0.1.0"
edition = "2021"

#[lib]
#name = "masktool"
#path = "src/lib.rs"

#[features]
#eg = ["dep:egui", "dep:eframe"]
#pg = ["dep:pixels", "dep:tiny-skia", "dep:winit", "dep:winit_input_helper"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu",] #  "wasm32-unknown-unknown"

[dependencies]
error-iter = "0.4"
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
glob = "0.3"
image = { version = "0.25", features = [] }
imageproc = { version = "0.25", features = [] }
log = "0.4"
rfd = { version = "0.15" }
serde = { version = "1", features = ["derive"] }
tiny-skia = { version = "0.11" }
winit = { version = "0.30", features = ["rwh_05"] }
winit_input_helper = { version = "0.16" }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
#[target.'cfg(target_arch = "wasm32")'.dependencies]
#wasm-bindgen-futures = "0.4"
#web-sys = "0.3.70" # to access the DOM (to hide the loading text)

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
